- Normalized table names